--- a/ShowReel.Test/ShowReel.Test.csproj
+++ b/ShowReel.Test/ShowReel.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ShowReel.Core\ShowReel.Core.csproj" />
+    <ProjectReference Include="..\ShowReel.Data\ShowReel.Data.csproj" />
   </ItemGroup>
 
 </Project>
