Added DbContext and Startup file

--- a/ShowReel.Data/ShowReel.Data.csproj
+++ b/ShowReel.Data/ShowReel.Data.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\ShowReel.Core\ShowReel.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ShowReelDb.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
