--- a/ShowReel.RestService/ShowReel.RestService.csproj
+++ b/ShowReel.RestService/ShowReel.RestService.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShowReel.Data\ShowReel.Data.csproj" />
+  </ItemGroup>
+
 </Project>
