fix #2; Added TimeCode domain and unit test
Signed-off-by: Mark Ramirez <mrk.anthony.rmrez@gmail.com>

--- a/ShowReel.Core/ShowReel.Core.csproj
+++ b/ShowReel.Core/ShowReel.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="App\Extensions\PalTimeCodeExtension.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Domain\TimeCode.cs~RF1a875c32.TMP" />
   </ItemGroup>
 
