--- a/ShowReel.Application/ShowReel.Application.csproj
+++ b/ShowReel.Application/ShowReel.Application.csproj
@@ -7,15 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Extensions\PalTimeCodeExtension.cs" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Domain\TimeCode.cs~RF1a875c32.TMP" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.5" />
+    <ProjectReference Include="..\ShowReel.Core\ShowReel.Core.csproj" />
   </ItemGroup>
 
 </Project>
